few updated added /rp wiki (set <url> *) added /rp server auto <true/false>